List spacing is fixed.

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -63,6 +63,7 @@ ol
 		line-height: 2.4rem
 		font-weight: 300
 		color: $alpha
+		margin-bottom: 14px
 
 img,
 pre,
